# python-project-template

./: .gitlab-ci.yml  Makefile  pyproject.toml
.github/workflows/: python-app.yml
src/main/: entry.py
tests/unit/: test_entry.py
